# pytaxel

./: .gitignore  AGENTS.md  README.md  agents_plan.md  import_SKR03.md  milestone0.md  prompts.md  pyproject.toml
examples/: m2a_walking_skeleton.py
pytaxel/: __init__.py
pytaxel/cli/: __init__.py  main.py
pytaxel/ebilanz/: __init__.py  extract.py  model.py  parser.py  renderer.py  templates.py
pytaxel/eric/: __init__.py  api.py  errors.py  facade.py  loader.py  types.py
pytaxel/web/: __init__.py  app.py
tests/: test_cli_integration.py  test_ebilanz_generation.py  test_eric_errors.py  test_web_api.py
